# ai-assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  worker.py
app/: __init__.py  config.py  db.py  models.py  schemas.py
app/routes/: leads.py
app/services/: nlp.py  telegram.py
scripts/: entrypoint.sh
